News with a little bit of style

--- a/src/creators/templates/base.html
+++ b/src/creators/templates/base.html
@@ -26,6 +26,23 @@
             .clearit { zoom: 1; }
             * html .clearit { height: 1%; }
             
+            body { font-family: Helvetica, Arial, sans-serif;}
+            
+            /*_________________________________________________________ News - Structure */
+            #news { width: 320px; margin: 0 auto; }
+            #news ul li { background: #ddd; padding: 10px; }
+            #news ul li.odd { background: #eee; }
+            
+            /*_________________________________________________________ News - Typography */
+            
+            
+            #news ul li p.status { font-size: 14px; }
+            #news ul li p.meta { font-size: 10px; padding-top: 5px; }
+            
+            #news ul li.major { padding: 20px; }
+            #news ul li.major p.status { font-size: 24px; font-weight: bold;  }
+            
+            
             
         </style>
     </head>
