News with a little bit of style

--- a/src/creators/templates/base.html
+++ b/src/creators/templates/base.html
@@ -37,7 +37,7 @@
             
             
             #news ul li p.status { font-size: 14px; }
-            #news ul li p.meta { font-size: 10px; padding-top: 5px; }
+            #news ul li p.meta { font-size: 10px; padding-top: 5px; text-transform: uppercase; color: #0079bc; }
             
             #news ul li.major { padding: 20px; }
             #news ul li.major p.status { font-size: 24px; font-weight: bold;  }
